--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,32 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: Home
     url: /
     weight: 10
-  - name: Papers
-    url: /#papers
+    
+  - name: About
+    #url: /#papers
+    url: /#about
     weight: 11
-  - name: Talks
-    url: /#talks
+    
+  - name: Portfolio
+  #  url: /#talks -----> Pointing Portfolio page to new MD file
+    url: portfolio/
     weight: 12
-  - name: News
-    url: /#news
+    
+  - name: Blog
+  #  url: /#news
+    url: blog/
     weight: 13
-  - name: Experience
-    url: experience/
+    
+  - name: Contact Me
+  #  url: experience/
     weight: 20
-  - name: Projects
-    url: projects/
-    weight: 30
-  - name: Teaching
-    url: teaching/
-    weight: 40
+    
+  #- name: Projects
+  #  url: projects/
+  #  weight: 30
+  #- name: Teaching
+  #  url: teaching/
+  #  weight: 40
